remove the F11 toggle code for now